--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
               "src/_redirects"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/assets/scss/styles.scss"
             ],
             "scripts": []
           },
@@ -95,7 +95,7 @@
               "src/_redirects"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/assets/scss/styles.scss"
             ],
             "scripts": []
           }
