--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@types/googlemaps": "^3.39.3",
     "hammerjs": "^2.0.8",
     "ngx-quicklink": "^0.2.0",
     "rxjs": "^6.5.4",
